--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/HFA
-spring.datasource.username=root
-spring.datasource.password=secret
-spring.datasource.driver-class-name =com.mysql.jdbc.Driver
+spring.datasource.username=HFA
+spring.datasource.password=friday&42%
+spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
 #spring.jpa.show-sql: true
